--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 	<div id="list-panel">
 		<ul id="list">
-
+			
 		</ul>
 	</div>
-	<div id="show-panel"></div>
+	<div id="show-panel">
+		
+	</div>
 	<script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
