--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>📕 Welcome to the Library 📗</title>
 	<link rel="stylesheet" href="./index.css">
 </head>
 <body>
-
+	<center>
+	<img src="https://cdn.taschen.com/custom/taschen/includes/phpThumb/phpThumb.php/q=70;f=png;640;/media/images/640/menu_books_1507171125_id_970319.png" height="240"><br>
+	<h1> Shhh...
+	</h1>
+	</center>
+	<br>
 	<div id="list-panel">
 		<ul id="list">
 
 		</ul>
 	</div>
-	<div id="show-panel"></div>
+	<div id="show-panel">
+
+	</div>
 	<script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
